# bevy_animation_tests

./: Cargo.toml
assets/: sinsack.glb
src/: main.rs
