[package]
name = "bevy_animation_tests"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_fly_camera = "0.7.0"

[patch.crates-io]
bevy = { git = "https://github.com/lassade/bevy", branch = "animations" }